tests/unit-fail-compilation/j055e.c
#include<limits.h>
int x;
enum e {a = 5 + (x & LONG_MAX)};
int main(void){

}
